// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Button Icon End 1`] = `
<button
  className="button button--default button--s-md"
>
  Button icon
  <span
    className="button-icon-end material-icons"
  >
    bookmark_border
  </span>
</button>
`;

exports[`Storyshots Example/Button Button Icon Start 1`] = `
<button
  className="button button--default button--s-md"
>
  <span
    className="button-icon-start material-icons"
  >
    account_circle
  </span>
  Button icon
</button>
`;

exports[`Storyshots Example/Button Danger Color 1`] = `
<button
  className="button button--danger button--s-md"
>
  Danger button
</button>
`;

exports[`Storyshots Example/Button Default 1`] = `
<button
  className="button button--default button--s-md"
>
  Default button
</button>
`;

exports[`Storyshots Example/Button Primary Color 1`] = `
<button
  className="button button--primary button--s-md"
>
  Primary button
</button>
`;

exports[`Storyshots Example/Button Second Color 1`] = `
<button
  className="button button--secondary button--s-md"
>
  Secondary button
</button>
`;

exports[`Storyshots Example/TextField Default 1`] = `
<div
  className="textField textField-md"
>
  <label
    className="textFieldLabel"
  >
    Your account
  </label>
  <label
    className="inputWrapper"
  >
    
    <input
      className="textFieldInput"
      defaultValue=""
      onBlur={[Function]}
      onFocus={[Function]}
    />
    
  </label>
  <span
    className="textFieldHelper"
  >
    Helper message
  </span>
</div>
`;

exports[`Storyshots Example/TextField Default Value 1`] = `
<div
  className="textField textField-md"
>
  <label
    className="textFieldLabel"
  >
    Your account
  </label>
  <label
    className="inputWrapper"
  >
    
    <input
      className="textFieldInput"
      defaultValue="Hello the world"
      onBlur={[Function]}
      onFocus={[Function]}
    />
    
  </label>
  <span
    className="textFieldHelper"
  >
    Helper message
  </span>
</div>
`;

exports[`Storyshots Example/TextField Error Message 1`] = `
<div
  className="textField textField-md textFieldError"
>
  <label
    className="textFieldLabel"
  >
    Your account
  </label>
  <label
    className="inputWrapper"
  >
    
    <input
      className="textFieldInput"
      defaultValue=""
      onBlur={[Function]}
      onFocus={[Function]}
    />
    
  </label>
  <span
    className="textFieldHelper"
  >
    Error message
  </span>
</div>
`;

exports[`Storyshots Example/TextField Full Width 1`] = `
<div
  className="textField textField-md textFieldFullWidth"
>
  <label
    className="textFieldLabel"
  >
    Full width input
  </label>
  <label
    className="inputWrapper"
  >
    
    <input
      className="textFieldInput"
      defaultValue=""
      onBlur={[Function]}
      onFocus={[Function]}
    />
    
  </label>
  <span
    className="textFieldHelper"
  >
    Helper message
  </span>
</div>
`;

exports[`Storyshots Example/TextField Small Size 1`] = `
<div
  className="textField textField-sm"
>
  <label
    className="textFieldLabel"
  >
    Your account (small one)
  </label>
  <label
    className="inputWrapper"
  >
    
    <input
      className="textFieldInput"
      defaultValue=""
      onBlur={[Function]}
      onFocus={[Function]}
    />
    
  </label>
  <span
    className="textFieldHelper"
  >
    Helper message
  </span>
</div>
`;

exports[`Storyshots Example/TextField Start Icon 1`] = `
<div
  className="textField textField-md textFieldFullWidth"
>
  <label
    className="textFieldLabel"
  >
    Full width input
  </label>
  <label
    className="inputWrapper"
  >
    <span
      className="material-icons"
    >
      bookmark_border
    </span>
    <input
      className="textFieldInput"
      defaultValue=""
      onBlur={[Function]}
      onFocus={[Function]}
    />
    
  </label>
  <span
    className="textFieldHelper"
  >
    Helper message
  </span>
</div>
`;
